# mal-code

./: .gitignore  README.md  pyproject.toml  upload_to_hf.py
ch1/: README.md  outputs.txt  utils.py
ch1/components/: encoder.py  feed_forward.py  input_embeddings.py  layer_norm.py  multi_head_attention.py  positional_encoding.py  projection.py  transformer.py
ch1/runs/weights/: note.md
ch1/tokenizer/en/: merges.txt  vocab.json
ch1/tokenizer/hi/: merges.txt  vocab.json
ch2/: README.md  constants.py  dataset.py  inference.py  load_pretrained.py  trainer.py  utils.py
ch2/checkpoints/: note.md
ch2/components/: feed_forward.py  gpt2.py  multi_head_attention.py  transformer.py
ch3/: README.md  download_llama.py  inference.py  load_pretrained.py  utils.py
ch3/components/: feedforward.py  grouped_query_attention.py  llama3.py  rms_norm.py  rope.py  silu.py  transformer.py
ch4/: 01_kv_cache.py  add_cuda_to_bashrc.txt
ch4/cuda/: matrix_add.cu  matrix_add.out  vector_add.cu  vector_add.out
ch4/triton/: 01_tensor_copy.py  02_grey_scale.py  03_matrix_mul.py  04_grouped_matrix_mul.py  utils.py
ch5/: README.md  chapter5.tex  constants.py  dataset.py  inference.py  logs.txt  logs_fp8.txt  memory_testing.py  simple_mla.py  train.py  trainer.py  utils.py
ch5/components/: common.py  deepseek.py  expert.py  mla.py  moe.py  mtp.py  quantization.py  router.py  simple_mla.py  transformer.py
